# Resume-Analyzer

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
Backend/: app.py
public/: app.js  index.html  style.css
